--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello!!</title>
 </head>
 <body>
 
